--- a/src/main/resources/static/back/manager/admin.html
+++ b/src/main/resources/static/back/manager/admin.html
@@ -20,10 +20,17 @@
 				<form action="" class="jqtransform" id="addNewsForm">
 					<table class="form_table pt15 pb15" width="100%" border="0" cellpadding="0" cellspacing="0">
 						<tr>
-							<td class="td_right">管理员名称：</td>
+							<td class="td_right">管理员姓名：</td>
 							<td>
 								<input type="text" id="aname" name="aname" class="input-text lh30" size="40" onBlur="checkUsername()">
 								<label id="username"></label>
+							</td>
+						</tr>
+					    <tr>
+							<td class="td_right">管理员账号：</td>
+							<td>
+								<input type="text" id="account" name="account" class="input-text lh30" size="40" onBlur="checkAccount()">
+								<label id="caccount"></label>
 							</td>
 						</tr>
 						<tr>
@@ -46,10 +53,14 @@
 								<input type="text" id="tel" name="tel" class="input-text lh30" size="40" onBlur="checkTel()">
 								<label id="telephone"></label>
 							</td>
+							<td class="td_right">头像：</td>
+							<td>
+								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setImagePreviews(this,'showPics')">
+							</td>
 						</tr>
 						<tr>
 							<td colspan="4" align="center">
-								<input type="button" name="button" class="btn btn82 btn_save2" onclick="reg()" value="注册">
+								<input type="button" name="button" class="btn btn82 btn_save2" onclick="reg()" value="注册新管理员">
 							</td>
 						</tr>
 					</table>
