--- a/src/main/resources/static/back/manager/supermanager.html
+++ b/src/main/resources/static/back/manager/supermanager.html
@@ -44,7 +44,12 @@
                     <li iconCls="icon-report-edit"><a href="javascript:void(0)" data-icon="icon-report-edit" data-link="echarts.html" iframe="0">查看销售报表</a></li>
                 </ul>
             </div>
-            <div title="管理中心" data-options="iconCls:'icon-user'" style="padding:5px;">  	
+            <div title="用户管理" data-options="iconCls:'icon-user'" style="padding:5px;">  	
+    			<ul class="easyui-tree wu-side-tree">
+                    <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="view_user.html" iframe="0">用户管理</a></li>
+                </ul>
+            </div>           
+             <div title="管理员中心" data-options="iconCls:'icon-user'" style="padding:5px;">  	
     			<ul class="easyui-tree wu-side-tree">
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="admin.html" iframe="0">添加管理员</a></li>
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="view_admin.html" iframe="0">管理员管理
