--- a/src/main/resources/static/back/manager/view_user.html
+++ b/src/main/resources/static/back/manager/view_user.html
@@ -1,8 +1,7 @@
 <table id="admin_data" data-options="fit:true"></table>
 
 <script>
-var statusObj = [{aid:0, aname:"已冻结"}, {aid:1, aname:"正常"}];
-var roleObj = [{rid:0,rname:"普通管理员"}, {rid:1,rname:"超级管理员"}];
+var statusObj = [{aid:0, aname:"冻结"}, {aid:1, aname:"恢复正常"}];
 var types_editRow = undefined;
 var types_op;
 var types_flag;
@@ -23,18 +22,12 @@ var types_obj = $('#admin_data').datagrid({
 		return info;
 	},
 	columns:[[
-		{field:'aid',title:'管理员编号',width:50,align:'center'},
-		{field:'account',title:'管理员账号',width:100,align:'center'},
-		{field:'aname',title:'管理员名称',width:100,align:'center'},
-		{field:'tel',title:'管理员电话',width:100,align:'center'},
-		{field:'role',title:'管理员等级',width:50,align:'center', formatter:function(val, row, index){
-			if(val == 0){
-				return "普通管理员";
-			} else if(val == 1){
-				return "超级管理员";
-			}
-		}, editor:{type: "combobox", options:{required: true, valueField:"rid", textField:"rname", data:roleObj}}},
-		{field:'status',title:'管理员状态',width:50,align:'center', formatter:function(val, row, index){
+		{field:'uid',title:'会员编号',width:50,align:'center'},
+		{field:'uname',title:'会员名称',width:100,align:'center'},
+		{field:'sex',title:'性别',width:40,align:'center'},
+		{field:'tel',title:'会员电话',width:100,align:'center'},
+		{field:'email',title:'会员邮箱',width:100,align:'center'},
+		{field:'status',title:'会员状态',width:50,align:'center', formatter:function(val, row, index){
 			if(val == 0){
 				return "已冻结";
 			} else if(val == 1){
