--- a/src/main/resources/static/back/manager/view_user.html
+++ b/src/main/resources/static/back/manager/view_user.html
@@ -9,7 +9,7 @@ var aname;
 var info;
 
 var types_obj = $('#admin_data').datagrid({
-	url:'/zyl/adm/findAll',
+	url:'/zyl/user/findAll',
 	method:"get",
 	fitColumns: true,
 	loadMsg: '数据加载中，请稍后...',
