--- a/src/main/resources/static/back/manager/supermanager.html
+++ b/src/main/resources/static/back/manager/supermanager.html
@@ -3,18 +3,19 @@
 <head>
 <meta charset="utf-8" />
 <title>后台管理</title>
-<link rel="stylesheet" type="text/css" href="../../css/easyui.css" />
-<link rel="stylesheet" type="text/css" href="../../css/wu.css" />
-<link rel="stylesheet" type="text/css" href="../../css/icon.css" />
-<script type="text/javascript" src="../../js/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="../../js/jquery.easyui.min.js"></script>
-<script type="text/javascript" src="../../js/easyui-lang-zh_CN.js"></script>
-<script type="text/javascript" src="../../js/showpic.js"></script>
-<script type="text/javascript" src="../../js/ajaxfileupload.js"></script>
-<script type="text/javascript" src="../../js/axios.js"></script>
-<script type="text/javascript" src="../../js/vue.js"></script>
-<script type="text/javascript" src="../../js/echarts.min.js"></script>
-<script src="../../ckeditor/ckeditor.js"></script>
+<link rel="stylesheet" type="text/css" href="/zyl/css/easyui.css" />
+<link rel="stylesheet" type="text/css" href="/zyl/css/wu.css" />
+<link rel="stylesheet" type="text/css" href="/zyl/css/icon.css" />
+<script type="text/javascript" src="/zyl/js/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="/zyl/js/jquery.easyui.min.js"></script>
+<script type="text/javascript" src="/zyl/js/easyui-lang-zh_CN.js"></script>
+<script type="text/javascript" src="/zyl/js/showpic.js"></script>
+<script type="text/javascript" src="/zyl/js/ajaxfileupload.js"></script>
+<script type="text/javascript" src="/zyl/js/axios.js"></script>
+<script type="text/javascript" src="/zyl/js/vue.js"></script>
+<script type="text/javascript" src="/zyl/js/echarts.min.js"></script>
+<script type="text/javascript" src="/js/md5.js"></script>
+<script src="/zyl/ckeditor/ckeditor.js"></script>
 </head>
 <body class="easyui-layout">
 	<!-- begin of header -->
