鲜花类型、系列 的添加查询修改

--- a/src/main/resources/static/back/manager/add_admin.html
+++ b/src/main/resources/static/back/manager/add_admin.html
@@ -17,18 +17,13 @@
 				<b class="pl15">管理员</b>
 			</div>
 			<div class="box_center">
-				<form action="" class="jqtransform" id="changeForm">
+				<form action="" class="jqtransform" id="addNewsForm">
 					<table class="form_table pt15 pb15" width="100%" border="0" cellpadding="0" cellspacing="0">
-				     	<tr>
-							<td class="td_right">编号：</td>
-							<td>
-								<label id="aid" >aid</label>
-							</td>
-						</tr>
 					    <tr>
 							<td class="td_right">账号：</td>
 							<td>
-								<label id="account">account</label>
+								<input type="text" id="account" name="account" class="input-text lh30" size="40" onBlur="checkAccount()">
+								<label id="caccount"></label>
 							</td>
 						</tr>
 						<tr>
@@ -45,7 +40,7 @@
 								<label id="password"></label>
 							</td>
 						</tr>
-						<tr>
+							<tr>
 							<td class="td_right">确认密码：</td>
 							<td>
 								<input type="password" id="ck" name="ck" class="input-text lh30" size="40"  onBlur="cPwd()">
@@ -69,12 +64,22 @@
 							<td>&nbsp;</td>
 							<td colspan="3" align="center">
 								<div id="showPics">
+								
 								</div>
 							</td>
 						</tr>
 						<tr>
+							<td class="td_right">管理员等级：</td>
+							<td colspan="3">
+								    <select id="level" value="0">
+							        <option value="0">普通管理员</option>
+							        <option value="1">超级管理员</option>					        
+							    </select>
+							</td>
+						</tr>
+						<tr>
 							<td colspan="4" align="center">
-								<input type="button" name="button" class="btn btn82 btn_save2" onclick="change()" value="修改个人信息">
+								<input type="button" name="button" class="btn btn82 btn_save2" onclick="reg()" value="注册新管理员">
 							</td>
 						</tr>
 					</table>
@@ -84,6 +89,10 @@
 	</div>
 </div>
 <script type="text/javascript">
+function checkAccount(){
+
+}
+
 function checkUsername(){
 	var username; 
 	username= $.trim($("#aname").val());
@@ -138,7 +147,7 @@ function checkTel(){
 	}
 }
 
-function change(){	
+function reg(){	
 	checkTel()
 	cPwd();
 	checkPwd();
@@ -147,23 +156,23 @@ function change(){
 		return;
 	}
 	
-	var aid = $.trim($("#aid").val());
 	var account = $.trim($("#account").val());
 	var aname = $.trim($("#aname").val());
 	var pwd = $.trim($("#pwd").val());
 	var tel = $.trim($("#tel").val());
+	var role=$.trim($("#level").val());
 	pwd = hex_md5(pwd);
 
 	
 	$.ajaxFileUpload({
-		url:"/zyl/adm/update",
+		url:"/zyl/adm/insert",
 	    secureuri:false,
 	    fileElementId:"pic",
 	    dataType:"json",
-	    data:{aid:aid,aname:aname,pwd:pwd,tel:tel},
+	    data:{account:account,aname:aname,pwd:pwd,tel:tel,role:role},
 	    success:function(data){
 	       if(data.success){
-	    		$("#changeForm")[0].reset();
+	    		$("#addNewsForm")[0].reset();
 	    		$("#showPics").html("");
 	    		alert("管理员信息添加成功...");
 	    	}else{
