--- a/src/main/resources/static/back/manager/view_flo.html
+++ b/src/main/resources/static/back/manager/view_flo.html
@@ -1,4 +1,8 @@
-<table id="view_goods_data" data-options="fit:true"></table>
+<table id="view_goods_data" data-options="fit:true">
+  <div>
+    <input type="text" id="sss"  class="easyui-searchbox"  prompt="请输入查询内容"  style="width:300px" searcher=""></input>
+  </div>
+</table>
 
 <div id="view_goods_search">
    <div class="datagrid-btn-separator"></div>
