--- a/src/main/resources/static/back/login.html
+++ b/src/main/resources/static/back/login.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="css/login.css">
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/md5.js"></script>
+<link rel="stylesheet" href="back/css/login.css">
+<script type="text/javascript" src="back/js/jquery.min.js"></script>
+<script type="text/javascript" src="back/js/md5.js"></script>
 <script type="text/javascript">
 function checkLogin() {
 	var account = $.trim($("#account").val());
@@ -45,25 +45,13 @@ function checkLogin() {
 			dataType:"json",
 			success:function(data){
 				if(data.success){
-					location.href="/back/normal";
+					location.href="normal";
 				}else{
 					alert("账号或密码错误...");
 				}
 			}
 		});
     }
-
-
-	/*
-	$.post("../admin",{op:"login",aname:account,pwd:pwd},data=>{
-		data = parseInt($.trim(data));
-		if(data == 200){
-			location.href="/back/home";
-		}else{
-			alert("账号或密码错误...");
-		}
-	},"text");
-	*/
 }
 </script>
 <title>后台登陆</title>
