--- a/src/main/resources/static/back/manager/add_flo.html
+++ b/src/main/resources/static/back/manager/add_flo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>源辰-添加菜品</title>
+<title>ZYL-添加鲜花</title>
 <link rel="shortcut icon" href="../../images/copylogo.png" type="image/x-icon" />
 <link rel="stylesheet" href="../css/common.css">
 <link rel="stylesheet" href="../css/main.css">
@@ -14,21 +14,27 @@
 	<div class="box">
 		<div class="box_border">
 			<div class="box_top">
-				<b class="pl15">添加菜品信息</b>
+				<b class="pl15">添加鲜花信息</b>
 			</div>
 			<div class="box_center">
 				<form action="" class="jqtransform" id="addNewsForm">
 					<table class="form_table pt15 pb15" width="100%" border="0" cellpadding="0" cellspacing="0">
 						<tr>
-							<td class="td_right">菜品类型：</td>
+							<td class="td_right">鲜花类型：</td>
 							<td>
-								<select class="select" name="tno" id="newsType">
+								<select class="select" name="tno" id="floType">
 								
 								</select>
 							</td>
-							<td class="td_right">菜品名称：</td>
+							<td class="td_right">鲜花系列：</td>
 							<td>
-								<input type="text" id="fname" name="fname" class="input-text lh30" size="40" placeholder="请输入菜品名称">
+								<select class="select" name="sno" id="floSeries">
+								
+								</select>
+							</td>
+							<td class="td_right">鲜花名称：</td>
+							<td>
+								<input type="text" id="fname" name="fname" class="input-text lh30" size="40" placeholder="请输入鲜花名称">
 							</td>
 						</tr>
 						<tr>
@@ -36,10 +42,14 @@
 							<td>
 								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setImagePreviews(this,'showPics')">
 							</td>
-							<td class="td_right">菜品价格：</td>
+							<td class="td_right">价格：</td>
 							<td>
-								<input type="text" id="price" name="price" class="input-text lh30" size="40" value="25">
+								<input type="text" id="price" name="price" class="input-text lh30" size="40" value="99">
 							</td>
+							<td class="td_right">库存：</td>
+							<td>
+								<input type="text" id="store" name="store" class="input-text lh30" size="40" value="30">
+							</td>						
 						</tr>
 						<tr>
 							<td>&nbsp;</td>
@@ -50,14 +60,8 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="td_right">菜品描述：</td>
-							<td colspan="3">
-								<textarea name="editor1" id="editor1" rows="10" cols="80"></textarea>
-							</td>
-						</tr>
-						<tr>
 							<td colspan="4" align="center">
-								<input type="button" name="button" class="btn btn82 btn_save2" onclick="addNewsInfo()" value="添加">
+								<input type="button" name="button" class="btn btn82 btn_save2" onclick="addFloInfo()" value="添加">
 								<input type="reset" name="button" class="btn btn82 btn_res" value="重置">
 							</td>
 						</tr>
@@ -67,27 +71,37 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript">
+<script type="text/javascript">	
 CKEDITOR.replace( 'editor1' );
-	
+
 $(function(){
-	$.post("../../types",{op:"finds"},data => {
+	$.post("/zyl/flowerType/findAll",data => {
 		var str="";
-		$.each(data,function(index,item){
-			str +="<option value='" + item.tno + "'>" + item.tname + "</option>";
+		$.each(data.data,function(index,item){
+			str +="<option value='" + item.tid + "'>" + item.tname + "</option>";
 		})
-		$("#newsType").append($(str));
+		$("#floType").append($(str));
+	},"json")
+	
+	$.post("/zyl/flowerSeries/findAll",data => {
+		var str="";
+		$.each(data.data,function(index,item){
+			str +="<option value='" + item.sid + "'>" + item.sname + "</option>";
+		})
+		$("#floSeries").append($(str));
 	},"json")
 })
 
 
 
-function addNewsInfo(){
-	var tno = $.trim($("#newsType").val());
+function addFloInfo(){
+	var tid = $.trim($("#floType").val());
+	var sid = $.trim($("#floSeries").val());
 	var fname = $.trim($("#fname").val());
 	var price = $.trim($("#price").val());
+	var store = $.trim($("#store").val());
 	var intro = CKEDITOR.instances.editor1.getData();//获取ckeditor下面的内容，设置setData("");	
-	
+
 	$.ajaxFileUpload({
 		url:"../../foods?op=add",
 	    secureuri:false,
@@ -98,18 +112,18 @@ function addNewsInfo(){
 	    	data = parseInt($.trim(data));
 	    	if(data == -1){
 	    		console.info(tno);
-	    		alert("您输入的菜品信息不完整...");
+	    		alert("您输入的信息不完整...");
 	    	}else if(data>0){
 	    		$("#addNewsForm")[0].reset();
 	    		$("#showPics").html("");
 	    		CKEDITOR.instances.editor1.setData("");
-	    		alert("菜品信息添加成功...");
+	    		alert("鲜花信息添加成功...");
 	    	}else{
-	    		alert("菜品信息添加失败，请稍后重试...");
+	    		alert("鲜花信息添加失败，请稍后重试...");
 	    	}
 	    },
 	    error:function(data,status,e){
-	    	alert("菜品信息添加失败...\n"+e);
+	    	alert("鲜花信息添加失败...\n"+e);
 	    }
 	});
 }
