--- a/src/main/resources/static/back/login.html
+++ b/src/main/resources/static/back/login.html
@@ -77,7 +77,7 @@ function checkLogin() {
 			dataType:"json",
 			success:function(data){
 				if(data.success){
-					location.href="super";
+					location.href="back/super";
 				}else{
 					alert("账号或密码错误...");
 				}
@@ -92,7 +92,7 @@ function checkLogin() {
 			dataType:"json",
 			success:function(data){
 				if(data.success){
-					location.href="normal";
+					location.href="back/normal";
 				}else{
 					alert("账号或密码错误...");
 				}
