--- a/src/main/resources/static/back/manager/add_flo.html
+++ b/src/main/resources/static/back/manager/add_flo.html
@@ -38,18 +38,28 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="td_right">图片：</td>
-							<td>
-								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setImagePreviews(this,'showPics')">
-							</td>
 							<td class="td_right">价格：</td>
 							<td>
 								<input type="text" id="price" name="price" class="input-text lh30" size="40" value="99">
 							</td>
-							<td class="td_right">库存：</td>
+							<td class="td_right">折扣：</td>
 							<td>
-								<input type="text" id="store" name="store" class="input-text lh30" size="40" value="30">
+								<input type="text" id="sale" name="sale" class="input-text lh30" size="40" >
+							</td>					
+							<td class="td_right">配送说明：</td>
+							<td>
+								<input type="text" id="deliveryDesc" name="deliveryDesc" class="input-text lh30" size="40" value="顺丰配送">
 							</td>						
+						</tr>
+						<tr>
+						  <td class="td_right">图片：</td>
+							<td>
+								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setImagePreviews(this,'showPics')">
+							</td>	
+							<td class="td_right">花语：</td>
+							<td>
+								<input type="text" id="flowerLan" name="flowerLan" class="input-text lh30" size="40" >
+							</td>
 						</tr>
 						<tr>
 							<td>&nbsp;</td>
@@ -57,6 +67,12 @@
 								<div id="showPics">
 								
 								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="td_right">具体描述：</td>
+							<td colspan="3">
+								<textarea name="editor1" id="editor1" rows="10" cols="80"></textarea>
 							</td>
 						</tr>
 						<tr>
@@ -99,21 +115,20 @@ function addFloInfo(){
 	var sid = $.trim($("#floSeries").val());
 	var fname = $.trim($("#fname").val());
 	var price = $.trim($("#price").val());
-	var store = $.trim($("#store").val());
-	var intro = CKEDITOR.instances.editor1.getData();//获取ckeditor下面的内容，设置setData("");	
+	var sale = $.trim($("#sale").val());
+	var deliveryDesc = $.trim($("#deliveryDesc").val());
+	var flowerLan = $.trim($("#flowerLan").val());
+	var description = CKEDITOR.instances.editor1.getData();//获取ckeditor下面的内容，设置setData("");	
 
 	$.ajaxFileUpload({
-		url:"../../foods?op=add",
+		url:"/zyl/flower/insert",
 	    secureuri:false,
 	    fileElementId:"pics",
 	    dataType:"text",
-	    data:{tno:tno,fname:fname,price:price,intro:intro},
+	    data:{tid:tid, sid:sid, fname:fname, price:price, sale:sale, deliveryDesc:deliveryDesc, flowerLan:flowerLan, description:description},
 	    success:function(data,status){
 	    	data = parseInt($.trim(data));
-	    	if(data == -1){
-	    		console.info(tno);
-	    		alert("您输入的信息不完整...");
-	    	}else if(data>0){
+            if(data.success){
 	    		$("#addNewsForm")[0].reset();
 	    		$("#showPics").html("");
 	    		CKEDITOR.instances.editor1.setData("");
