--- a/src/main/resources/static/back/manager/add_flo_series.html
+++ b/src/main/resources/static/back/manager/add_flo_series.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <label >鲜花系列名：</label>
-    <input type="text" id="types">
+    <input type="text" id="series">
 </div>
 
 </body>
