--- a/src/main/resources/static/back/manager/view_flo.html
+++ b/src/main/resources/static/back/manager/view_flo.html
@@ -68,7 +68,7 @@ var view_goods_obj = $('#view_flo_data').datagrid({
 		{field:'tid', title:'所属类型',width:50,align:'center'},
 		{field:'sid', title:'所属系列',width:50,align:'center'},
 		{field:'price', title:'单价',width:50,align:'center'},
-		{field:'deliveryDesc', title:'配送说明',width:100,align:'center', sortable: true},
+		{field:'deliveryDesc', title:'配送说明',width:100,align:'center'},
 		{field:'status',title:'类型状态',width:50,align:'center', formatter:function(val, row, index){
 			if(val == 0){
 				return "不可用";
