--- a/src/main/resources/static/front/register.html
+++ b/src/main/resources/static/front/register.html
@@ -2,71 +2,81 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZYL商城会员注册</title>
-    <link rel="short icon" href="images/logo.png" type="image/x-icon">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ZYL商城会员注册</title>
+<link rel="short icon" href="images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/register.css">
+<link rel="stylesheet"
+	href="front/css/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="front/css/register.css">
 </head>
 
-<body style="background: url(images/background.jpg)">
+<body style="background: url(front/images/background.jpg)">
 
-    <header>
-        <h1>注册</h1>
-    </header>
-    <div class="steps" >
-        <ol>
-            <li class="active" style="padding-left: 0px;"><i>1</i><span>填写账户信息</span></li>
-            <li><i>2</i><span>验证账户信息</span></li>
-            <li><i>3</i><span>注册成功</span></li>
-        </ol>
-    </div>
-    <div class="content">
-        <form action="#" class="mform" role="form" >
-            <div class="form-line">
-                <span class="msg">用户名：</span>
-                <input id="userName" name="userName" type="text" class="form-control" onblur="checkAccount(this.value.trim())">
-                <span class="msgError" id="userNameError"></span>
-            </div>
-            <div class="form-line">
+	<header>
+		<h1>注册</h1>
+	</header>
+	<div class="steps">
+		<ol>
+			<li class="active" style="padding-left: 0px;"><i>1</i><span>填写账户信息</span></li>
+			<li><i>2</i><span>验证账户信息</span></li>
+			<li><i>3</i><span>注册成功</span></li>
+		</ol>
+	</div>
+	<div class="content">
+		<form action="#" class="mform" role="form">
+			<div class="form-line">
+				<span class="msg">用户名：</span> <input id="userName" name="userName"
+					type="text" class="form-control"
+					onblur="checkAccount(this.value.trim())"> <span
+					class="msgError" id="userNameError"></span>
+			</div>
+			<div class="form-line">
+				<span class="msg">邮箱：</span> <input id="email" name="email"
+					type="text" class="form-control"
+					onfocus="document.getElementById('emailError').textContent = '';"
+					onblur="checkMail(this.value.trim())"> <span
+					class="msgError" id="emailError"></span>
+			</div>
+			<div class="form-line">
 
-                <span class="msg">登录密码：</span>
-                <input type="password" id="pwd" name="pwd" class="form-control" onblur="checkPassword(this.value.trim())">
-                <span class="msgError" id="pwdError"></span>
+				<span class="msg">登录密码：</span> <input type="password" id="pwd"
+					name="pwd" class="form-control"
+					onblur="checkPassword(this.value.trim())"> <span
+					class="msgError" id="pwdError"></span>
 
-            </div>
-            <div class="form-line">
+			</div>
+			<div class="form-line">
 
-                <span class="msg">确认密码：</span>
-                <input type="password" id="pwdAgain" name="pwdAgain" class="form-control" onblur="checkPasswordAgain(this.value.trim())">
-                <span class="msgError" id="pwdAgainError"></span>
+				<span class="msg">确认密码：</span> <input type="password" id="pwdAgain"
+					name="pwdAgain" class="form-control"
+					onblur="checkPasswordAgain(this.value.trim())"> <span
+					class="msgError" id="pwdAgainError"></span>
 
 
-            </div>
+			</div>
 
-            <div class="form-line">
-                <input style="margin-left: 25%;width: 50%; text-align: center;
-                " type="button" class="btn btn-primary" value="同意协议并注册" onclick="register()">
+			<div class="form-line">
+				<input style="margin-left: 25%; width: 50%; text-align: center;"
+					type="button" class="btn btn-primary" value="同意协议并注册"
+					onclick="register()">
 
-            </div>
-            <a href="#">ZYL商城协议</a>
-            <span class="msgError" id="error"></span>
-        </form>
-    </div>
-       <footer >
-<div  class="copyright" >
-    Copyright&nbsp;&copy;&nbsp;2020&nbsp;&nbsp;ZJ&nbsp;版权所有
-</div>
-</footer>
-    <script src="js/jquery.js"></script>
+			</div>
+			<a href="#">ZYL商城协议</a> <span class="msgError" id="error"></span>
+		</form>
+	</div>
+	<footer>
+		<div class="copyright">
+			Copyright&nbsp;&copy;&nbsp;2020&nbsp;&nbsp;ZJ&nbsp;版权所有</div>
+	</footer>
+	<script src="front/js/jquery.js"></script>
 
-    <script src="js/checkUtil.js"></script>
-    <script src="js/md5.js"></script>
-    <script src="js/setTimeOut.js"></script>
+	<script src="front/js/checkUtil.js"></script>
+	<script src="front/js/md5.js"></script>
+	<script src="front/js/setTimeOut.js"></script>
 
-    <script>
+	<script>
         window.onload = function() {
             document.getElementById('userName').focus();
             document.onkeyup = function(e) {
@@ -88,18 +98,20 @@
             let account = document.getElementById('userName').value.trim();
             let pwd = document.getElementById('pwd').value.trim();
             let pwdAgain = document.getElementById('pwdAgain').value.trim();
-            if (checkAccount(account) && checkPassword(pwd) && checkPasswordAgain(pwdAgain)) {
+        	let email = document.getElementById("email").value;
+
+            if (checkAccount(account) && checkPassword(pwd) && checkPasswordAgain(pwdAgain) && checkEmail(email)) {
                 $.ajax({
                     type: 'POST',
-                    url: "/register/step1",
+                    url: "register/step1",
                     data: {
                         account: account,
-                        password: hex_md5(pwd)
+                        password: hex_md5(pwd),
+                        email:email
                     },
                     dataTypa: 'json/text',
                     success: function(msg) {
                         if (!msg.success) {
-
                             if (msg.data === "ACCOUNT_REPEAT") {
                             	console.log(msg.data)
                                 $('#userNameError').text('用户名已存在');
@@ -110,7 +122,7 @@
 
                             $.ajax({
                                 type: 'GET',
-                                url: "/register/step2",
+                                url: "register/step2",
                                 //dataTypa: 'html',
                                 success: function(rs) {
                                     $(".content").html(rs);
