--- a/src/main/resources/static/front/registerStep3.html
+++ b/src/main/resources/static/front/registerStep3.html
@@ -12,7 +12,7 @@
 setTimeout("javascript:location.href='../index'", 5000); 
 </script>
 <p>注册成功,正在跳转登录界面...</p>
-<a href="../index">若长时间未跳转请点击此链接</a>
+<a href="/zyl/front">若长时间未跳转请点击此链接</a>
 </body>
 
 </html>
