--- a/src/main/resources/static/back/manager/view_user.html
+++ b/src/main/resources/static/back/manager/view_user.html
@@ -23,9 +23,22 @@ var types_obj = $('#admin_data').datagrid({
 	},
 	columns:[[
 		{field:'uid',title:'会员编号',width:50,align:'center'},
-		{field:'uname',title:'会员名称',width:100,align:'center'},
-		{field:'sex',title:'性别',width:40,align:'center'},
-		{field:'tel',title:'会员电话',width:100,align:'center'},
+		{field:'account',title:'会员账号',width:100,align:'center'},
+		{field:'uname',title:'会员名称',width:100,align:'center', formatter:function(val, row, index){
+			if(val == "" || val == null){
+				return "不明";
+			}
+		}}, 
+		{field:'sex',title:'性别',width:40,align:'center', formatter:function(val, row, index){
+			if(val == "" || val == null){
+				return "不明";
+			}
+		}}, 
+		{field:'tel',title:'会员电话',width:100,align:'center', formatter:function(val, row, index){
+			if(val == "" || val == null){
+				return "不明";
+			}
+		}}, 
 		{field:'email',title:'会员邮箱',width:100,align:'center'},
 		{field:'status',title:'会员状态',width:50,align:'center', formatter:function(val, row, index){
 			if(val == 0){
@@ -75,6 +88,7 @@ var types_obj = $('#admin_data').datagrid({
 				var row = types_obj.datagrid("getChanges")[0];
 				
 				var status = row.status;
+				var uid = row.uid;
 				
 				$.ajax({
 					url:"/zyl/user/update",
